feat: update perfect login logic
