# internal/dal/model/users.gen.go
@@ -1,36 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package model
-
-const TableNameUser = "users"
-
-// User mapped from table <users>
-type User struct {
-	ID        uint32  `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	Username  string  `gorm:"column:username;not null" json:"username"` // 用户名
-	Password  string  `gorm:"column:password;not null" json:"password"` // 密码
-	Email     *string `gorm:"column:email" json:"email"`                // 邮箱
-	CreatedAt int64   `gorm:"column:created_at;not null" json:"created_at"`
-	UpdatedAt int64   `gorm:"column:updated_at;not null" json:"updated_at"`
-	DeletedAt *int64  `gorm:"column:deleted_at" json:"deleted_at"`
-}
-
-// IsEmpty determines whether the structure is empty
-func (m *User) IsEmpty() bool {
-	if m == nil {
-		return true
-	}
-	return m.ID == 0
-}
-
-// GetID get the ID of the database table
-func (m *User) GetID() int64 {
-	return int64(m.ID)
-}
-
-// TableName User's table name
-func (*User) TableName() string {
-	return TableNameUser
-}
